--- a/_posts/2021-11-28-hello.md
+++ b/_posts/2021-11-28-hello.md
@@ -7,7 +7,7 @@ tags:
   - website
 ---
 
-I have officially migrated from my former blog shilpasuresh15.worpress.com (which is admittedly a mouthful) to this site! 
+I have officially migrated from my former blog https://shilpasuresh15.wordpress.com (which is admittedly a mouthful) to this site! 
 
 Upcoming posts will initally cover the basics: Resume, Projects, links to social media, etc. 
 
